deployment-ingress-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloggingapp-deployment
  namespace: webapps
spec:
  selector:
    matchLabels:
      app: bloggingapp
  replicas: 2
  template:
    metadata:
      labels:
        app: bloggingapp
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: bloggingapp
          image: malware4/bloggingapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: bloggingapp-service
  namespace: webapps
spec:
  selector:
    app: bloggingapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloggingapp-ingress
  namespace: webapps
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:252632663088:certificate/36071aa9-32e3-4733-9469-ddd704d8577b
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: app.nickzerze.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bloggingapp-service
                port:
                  number: 80
